--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <label>fullname</label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
+      <input id="fullname" name="fullname">
 
 
       <!-- Add a label for 'email'-->
