--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
-
+      <labe>email</labe>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
+      <input id="email" placeholder="Enter Email">
 
 
       <!-- Add a label for 'phone'-->
