--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <labe>email</labe>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <input type="text" id="email" placeholder="Enter Email" required>
+      <input type="email" id="email" placeholder="Enter Email" required>
 
 
       <!-- Add a label for 'phone'-->
