--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
       <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
-      <labe>email</labe>
+      <label>email</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
       <input type="email" id="email" placeholder="Enter Email" required>
 
 
       <!-- Add a label for 'phone'-->
-
+      <label>phone</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
 
