--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <label>phone</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-      <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)" optional>
 
       <!-- Add a label for 'message'-->
 
