--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <input type="tel" id="phone" placeholder="Enter Telephone (optional)" optional>
 
       <!-- Add a label for 'message'-->
-
+      <label>message</label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <textarea id="message" name="message">Enter Message</textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
 
