--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <label>message</label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <textarea id="message" name="message">Enter Message</textarea>
+      <label type="textarea" id="message" name="message" placeholder "Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
 
