--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <input type="textarea" id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
+      <input type="checkbox">
 
 
 
