--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
     <form>
 
       <!-- Add a label for 'fullname'-->
-      <label>fullname</label>
+      <label for="fullname">fullname</label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
       <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
-      <label>email</label>
+      <label for="email">email</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
       <input type="email" id="email" name="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'phone'-->
-      <label>phone</label>
+      <label for="phone">phone</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
       <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)" optional>
 
       <!-- Add a label for 'message'-->
-      <label>message</label>
+      <label for="message">message</label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
       <textarea id="message" name="message" placeholder="Enter Message"></textarea>
